Add flex property to the linter

--- a/gulp/utils/scss-lint.yml
+++ b/gulp/utils/scss-lint.yml
@@ -136,6 +136,7 @@ linters:
       "-ms-overflow-y",
       "clip",
       "zoom",
+      "flex",
       "flex-align",
       "flex-direction",
       "flex-order",
