Allow colors keywords in linter
Linter throw an error on custom color functions like `color: color(blue);` like `Color blue should be written in hexadecimal form`.

So, disable this option.

--- a/gulp/utils/scss-lint.yml
+++ b/gulp/utils/scss-lint.yml
@@ -17,7 +17,7 @@ linters:
     convention: zero # or `none`
 
   ColorKeyword:
-    enabled: true
+    enabled: false
 
   ColorVariable:
     enabled: false
