--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.8.1",
     "gulp-newer": "^0.5.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^5.1.8",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
