--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-html-i18n": "^0.2.3",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
+    "gulp-jade": "^1.0.1",
     "gulp-load-plugins": "^0.8.1",
     "gulp-newer": "^0.5.0",
     "gulp-plumber": "^1.0.1",
