--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "gulp-html-i18n": "^0.2.3",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
-    "gulp-jade": "^1.0.1",
     "gulp-load-plugins": "^0.8.1",
     "gulp-newer": "^0.5.0",
     "gulp-plumber": "^1.0.1",
@@ -30,6 +29,7 @@
     "gulp-svgstore": "^5.0.0",
     "merge-stream": "^0.1.7",
     "postcss-assets": "^2.0.0",
+    "run-sequence": "^1.1.1",
     "yargs": "^3.5.3"
   }
 }
