--- a/gulp/utils/scss-lint.yml
+++ b/gulp/utils/scss-lint.yml
@@ -139,6 +139,7 @@ linters:
       - flex-direction
       - flex-order
       - flex-pack
+      - justify-content
       - column-count
       - column-fill
       - column-rule
