--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "author": "Denis Borovikov",
   "private": true,
   "devDependencies": {
-    "autoprefixer-core": "^5.2.0",
-    "browser-sync": "^2.2.2",
-    "chalk": "^1.0.0",
-    "css-mqpacker": "^3.0.1",
-    "css-sprite": "^0.9.3",
-    "extend": "^2.0.0",
-    "gulp": "^3.8.11",
+    "autoprefixer-core": "^5.2.1",
+    "browser-sync": "^2.8.2",
+    "chalk": "^1.1.1",
+    "css-mqpacker": "^3.1.0",
+    "css-sprite": "^0.9.9",
+    "extend": "^2.0.1",
+    "gulp": "^3.9.0",
     "gulp-css-flipper": "^1.0.2",
     "gulp-file-include": "^0.9.0",
     "gulp-html-i18n": "^0.2.3",
     "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.2.1",
+    "gulp-imagemin": "^2.3.0",
     "gulp-load-plugins": "^0.8.1",
-    "gulp-newer": "^0.5.0",
+    "gulp-newer": "^0.5.1",
     "gulp-plumber": "^1.0.1",
-    "gulp-postcss": "^5.1.8",
+    "gulp-postcss": "^6.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
-    "gulp-sass-bulk-import": "git://github.com/denisborovikov/gulp-sass-bulk-import",
-    "gulp-scss-lint": "^0.2.0",
+    "gulp-sass-bulk-import": "^0.3.2",
+    "gulp-scss-lint": "^0.2.4",
     "gulp-split-locales": "git://github.com/denisborovikov/gulp-split-locales.git",
-    "gulp-svgmin": "^1.1.1",
-    "gulp-svgstore": "^5.0.0",
-    "merge-stream": "^0.1.7",
-    "postcss-assets": "^2.0.0",
-    "run-sequence": "^1.1.1",
-    "yargs": "^3.5.3"
+    "gulp-svgmin": "^1.2.0",
+    "gulp-svgstore": "^5.0.4",
+    "merge-stream": "^0.1.8",
+    "postcss-assets": "^2.1.3",
+    "run-sequence": "^1.1.2",
+    "yargs": "^3.21.0"
   }
 }
