--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "browser-sync": "^2.9.1",
     "chalk": "^1.1.1",
     "css-mqpacker": "^4.0.0",
-    "css-sprite": "^0.9.9",
-    "extend": "^2.0.1",
+    "extend": "^3.0.0",
     "gulp": "^3.9.0",
     "gulp-css-flipper": "^1.0.2",
-    "gulp-file-include": "^0.9.0",
+    "gulp-file-include": "^0.13.7",
     "gulp-html-i18n": "^0.2.3",
-    "gulp-if": "^1.2.5",
+    "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
-    "gulp-load-plugins": "^0.8.1",
+    "gulp-load-plugins": "^1.0.0",
     "gulp-newer": "^0.5.1",
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.0.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^2.0.4",
     "gulp-sass-bulk-import": "^0.3.2",
-    "gulp-scss-lint": "^0.2.4",
+    "gulp-scss-lint": "^0.3.6",
     "gulp-split-locales": "git://github.com/denisborovikov/gulp-split-locales.git",
     "gulp-svgmin": "^1.2.0",
     "gulp-svgstore": "^5.0.4",
-    "merge-stream": "^0.1.8",
+    "merge-stream": "^1.0.0",
     "postcss-assets": "^3.0.2",
     "run-sequence": "^1.1.2",
-    "yargs": "^3.24.0"
+    "sprity": "^1.0.7",
+    "yargs": "^3.27.0"
   }
 }
